Made more changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.0)
-project(aviation_sim_util)
+cmake_minimum_required(VERSION 3.14)
+project(aviation_calc_util)
 
 set(CMAKE_CXX_STANDARD 14)
 
