--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,8 @@
+# Boost
+find_package(Boost REQUIRED COMPONENTS date_time)
+include_directories(${Boost_INCLUDE_DIRS})
+link_libraries(${Boost_LIBRARIES})
+# End Boost
+
 include_directories(${PROJECT_SOURCE_DIR}/include)
-add_library(AviationSimUtil SHARED GeoUtil.cpp GeoPoint.cpp)
+add_library(AviationCalcUtil SHARED GeoUtil.cpp GeoPoint.cpp MathUtil.cpp)
