--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,19 +34,7 @@ set_target_properties(aviationcalc
         )
 
 # Link Libraries
-if (WIN32)
-    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
-    target_link_libraries(aviationcalc
-            Urlmon
-            Boost::boost
-            Boost::filesystem
-            Boost::disable_autolinking
-            Boost::dynamic_linking
-            eccodes)
-else ()
-    find_package(CURL REQUIRED)
-    target_link_libraries(aviationcalc Boost::boost Boost::filesystem eccodes CURL::CURL)
-endif ()
+target_link_libraries(aviationcalc Boost::boost Boost::filesystem eccodes Poco::Poco)
 
 # DLL Export Headers
 GENERATE_EXPORT_HEADER(aviationcalc
