Chagned eccodes perl requirement to build only.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,24 +34,24 @@ add_subdirectory(src)
 
 # Install
 set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY true)
-install(TARGETS aviationcalc
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-        )
-
-install(DIRECTORY "${CMAKE_SOURCE_DIR}/include/"
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
-install(DIRECTORY "${CMAKE_BINARY_DIR}/exports/"
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
-install(DIRECTORY "${CMAKE_BINARY_DIR}/bin/"
-        DESTINATION ${CMAKE_INSTALL_BINDIR}
-        FILES_MATCHING
-        PATTERN "*.dll"
-        PATTERN "*.pdb"
-        PATTERN "*.ilk"
-        )
+#install(TARGETS aviationcalc
+#        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+#        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+#        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+#        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+#        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+#        )
+#
+#install(DIRECTORY "${CMAKE_SOURCE_DIR}/include/"
+#        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+#
+#install(DIRECTORY "${CMAKE_BINARY_DIR}/exports/"
+#        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+#
+#install(DIRECTORY "${CMAKE_BINARY_DIR}/bin/"
+#        DESTINATION ${CMAKE_INSTALL_BINDIR}
+#        FILES_MATCHING
+#        PATTERN "*.dll"
+#        PATTERN "*.pdb"
+#        PATTERN "*.ilk"
+#        )
