--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.14)
 project(aviation-calc-util
-        VERSION 0.0.7
+        VERSION 0.1.0
         DESCRIPTION "A library to assist with aviation related calculations."
         LANGUAGES CXX
         )
+
+set(PROJECT_VERSION 0.1.0-rc1)
 
 set(CMAKE_CXX_STANDARD 20)
 
